# GPT-flow-vis

./: .gitignore  README.md
experiment/flow/: loadnc4.ipynb  loadnc4.py  nc2vtk.py  streamline_paraview.py  streamline_vtk.py
experiment/services/: gpt_access.py
mysite/: manage.py
mysite/mysite/: asgi.py  routing.py  settings.py  urls.py
mysite/server/: connection.py  consumers.py  controller.py  errors.py  testclib.py  urls.py  utils.py  views.py
mysite/server/experiment/: testclib.py
mysite/server/experiment/CProj/: CMakeLists.txt  ViewNaive.cpp  ViewNaive.h  make.sh  pathline.cpp  pathline.h  savePic.cpp  savePic.h  utils.cpp  utils.h
mysite/server/experiment/flow/: __init__.py  glo_var.py  nc2vtk.py  start.sh  streamline_paraview.py  streamline_vtk.py  vtk_helper.py
mysite/server/experiment/services/: gpt_access.py
mysite/server/gpt/: __init__.py  access.py  lc.py  prompts.py
mysite/server/langchain/: functions.py  no_agent.py  tools.py
server/app/: urls.py
server/server/: settings.py
web/: .eslintrc.js  package-lock.json  package.json  tsconfig.json  vue.config.js
web/src/: App.vue  background.ts  main.ts
web/src/components/: ChatView.vue  Message.vue
web/src/plugin/: request.ts  websocket.ts
web/src/router/: index.ts
web/src/views/: ChatView.vue  MainView.vue  TestView.vue
